2009-08-04  Sam Steingold  <sds@gnu.org>

	keep gnulib files with the module which needs them
	* modules/regexp/gllib, modules/wildcard/gllib:
	* modules/regexp/glm4, modules/wildcard/glm4: add
	* Makefile.devel (MAKEFILE_IN): generate
	modules/regexp/gllib/Makefile.in & modules/wildcard/gllib/Makefile.in
	(gnulib-imported): update all gllib and glm4 directories
	* makemake.in: use libgnu.a as generated by the gnulib build
	process instead of individual object files
	* modules/regexp/Makefile.in, modules/wildcard/Makefile.in:
	* modules/regexp/link.sh.in, modules/wildcard/link.sh.in: link
	with libgnu.a

2009-08-01  Sam Steingold  <sds@gnu.org>

	* genclisph.d (emit_typedef_test): avoid a compilation warning

2009-08-03  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (bdb_errno): do not call end_system_call()
	(LOCK-GET, TXN-RECOVER): move bdb_errno out of
	begin_blocking_system_call/end_blocking_system_call

2009-08-02  Vladimir Tzankov  <vtzankov@gmail.com>

	BERKELEY-DB: fix problems with MT
	* /modules/berkeley-db/bdb.c (SYSCALL1, my_fopen): move error reporting
	outside begin_blocking_system_call/end_blocking_system_call
	(BDB::DBE-SET-OPTIONS): fix a gc-safety bug

2009-07-31  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (with_pinned_varobject): add & export
	* modules/rawsock/rawsock.c (with_buffer_arg, with_sockaddr_arg): use it

2009-07-31  Vladimir Tzankov  <vtzankov@gmail.com>

	RAWSOCK: fix object unpinning
	* modules/rawsock/rawsock.c (with_sockaddr_arg, with_opt_sa_arg): when
	the "body" changes the STACK and pinned object is passed as STACK_x,
	ASSERT_VALID_UNPIN() aborts
	(SOCK-READ, SOCK-READ): unpin object after system calls returns

2009-07-30  Sam Steingold  <sds@gnu.org>

	RAWSOCK: pin everything properly
	* modules/rawsock/rawsock.c (with_sockaddr_arg): replaces CHECK_SOCKADDR
	(PIN_ARG_USE, PIN_ARG_DECL, PIN_DECL, PIN_INIT): define based on
	MULTITHREAD to pass pinned_chain_t objects around